--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "firebase": "^10.5.2",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.5.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuefire": "^3.1.17"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
