--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "firebase": "^10.5.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.5.0",
