--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "luxon": "^3.4.4",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1"
   },
