--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@quasar/extras": "^1.16.4",
     "firebase": "^10.5.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.6.0",
+    "v-calendar": "^3.1.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.5.0",
     "vue-router": "^4.0.0",
