feature: Add config new email firebase 🔧

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Firebase config
 
-VITE_API_KEY=AIzaSyDbl66WTxLMnoZpR4y5wyHD5QjBRRLvpnU
-VITE_AUTH_DOMAIN=my-diary-food-33c08.firebaseapp.com
-VITE_PROJECT_ID=my-diary-food-33c08
-VITE_STORAGE_BUCKET=my-diary-food-33c08.appspot.com
-VITE_MESSASING_SENDER_ID=456668141085,
-VITE_APP_ID=1:456668141085:web:36881efb571f7244e0d8f4
+VITE_API_KEY=AIzaSyAvyBwwAH1yUAXh5gdkk22dL-iVdNyYS9A
+VITE_AUTH_DOMAIN=my-diary-food-e5ba7.firebaseapp.com
+VITE_PROJECT_ID=my-diary-food-e5ba7
+VITE_STORAGE_BUCKET=my-diary-food-e5ba7.appspot.com
+VITE_MESSASING_SENDER_ID=353249165021,
+VITE_APP_ID="1:353249165021:web:a21d975bd6666c84ace534"
