--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "6.1.2",
     "@popperjs/core": "^2.11.8",
-    "@quasar/extras": "^1.16.4",
+    "@quasar/extras": "^1.16.12",
     "firebase": "^10.5.2",
     "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
-    "quasar": "^2.6.0",
+    "pinia-plugin-persistedstate": "^3.2.3",
+    "quasar": "^2.16.9",
     "v-calendar": "^3.1.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.5.0",
@@ -26,13 +28,13 @@
     "vuefire": "^3.1.17"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.3.0",
-    "autoprefixer": "^10.4.2",
+    "@quasar/app-vite": "^1.9.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "luxon": "^3.4.4",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.44",
     "prettier": "^2.5.1"
   },
   "engines": {
